@@ -7,6 +7,7 @@ Version 1.0
   - Add Logging subsystem activation\deactivation button to Logging tab toolbar;
 
   Fixed:
+  - Win32 prefix creation while prefix directory exists;
   - Unite Icon\Detail toolbar actions;
   - No translations autoupdate at project build. Use `make translations` insted;
   - Fixed process refresh loop;
